#13 이미지 추가 ui 작성 및 이미지 롱클릭시 삭제 되도록 수정

--- a/app/src/main/res/layout/fragment_image_picker.xml
+++ b/app/src/main/res/layout/fragment_image_picker.xml
@@ -7,6 +7,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvImagePicker"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"/>
     </LinearLayout>
 </layout>
