--- a/app/src/main/res/layout/item_image_picker_plus.xml
+++ b/app/src/main/res/layout/item_image_picker_plus.xml
@@ -2,15 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/clRootImagePickerPlus"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="150dp"
+    android:background="@drawable/background_image_picker_plus_root">
 
     <ImageView
-        android:id="@+id/ivPlus"
-        android:layout_width="0dp"
+        android:id="@+id/ivPlusImagePickerPlus"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_image_plus"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_image_plus" />
 </androidx.constraintlayout.widget.ConstraintLayout>
