--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -131,16 +131,16 @@
             android:layout_weight="1" />
 
         <FrameLayout
+            android:background="@color/lemon"
             android:layout_width="match_parent"
             android:layout_height="64dp"
-            android:background="#FEF051"
-            android:foreground="?attr/selectableItemBackground">
+            android:onClick="@{() -> model.listener.goToPreview()}">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="완료하기" />
+                android:text="@string/complete" />
         </FrameLayout>
     </LinearLayout>
 </layout>
