--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,12 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="black">#000000</color>
+    <color name="blue_blue">#234eb6</color>
+    <color name="dark_mint">#60d170</color>
+    <color name="white">#d6d6d6</color>
+    <color name="pinkish_grey">#c4c4c4</color>
+    <color name="lemon">#fef051</color>
+
     <color name="colorBackgroundImagePickPlus">#D6D6D6</color>
 </resources>
