--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="blue_blue">#234eb6</color>
     <color name="dark_mint">#60d170</color>
     <color name="white">#d6d6d6</color>
+    <color name="white_two">#ffffff</color>
     <color name="pinkish_grey">#c4c4c4</color>
     <color name="lemon">#fef051</color>
 
