--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#fff">
+            android:background="@color/white_two">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -30,32 +30,64 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/btnMainBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="6dp"
+                    android:src="@drawable/ic_arrow_back" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="초대장 만들기" />
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="@string/make_invitation"
+                    android:textColor="@color/black"
+                    android:textSize="20dp" />
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="#fff">
+            android:layout_height="140dp"
+            android:background="@color/white_two">
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <View
+                    android:layout_width="174dp"
+                    android:layout_height="11dp"
+                    android:layout_gravity="bottom"
+                    android:background="@color/lemon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/black"
+                    android:textSize="24dp"
+                    android:textStyle="bold"
+                    tools:text="애교만점형" />
+            </FrameLayout>
 
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@color/colorPrimary"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_width="wrap_content"
+                android:layout_height="96dp"
+                android:layout_gravity="center|bottom"
+                tools:background="@color/white"
+                tools:layout_width="104dp" />
+        </FrameLayout>
 
         <androidx.cardview.widget.CardView
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="336dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:orientation="vertical"
             app:cardCornerRadius="16dp">
@@ -65,27 +97,17 @@
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:paddingTop="16dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp">
 
-                <FrameLayout
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="11dp">
-
-                    <View
-                        android:layout_width="100dp"
-                        android:layout_height="10dp"
-                        android:layout_gravity="bottom"
-                        android:background="#FEF051" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="애교만점형" />
-                </FrameLayout>
+                    android:textColor="@color/black"
+                    android:textSize="16dp"
+                    tools:text="난 너가 꼭 와주면 좋겠어💖 와줄꺼지?" />
 
                 <include
                     layout="@layout/layout_main_button"
@@ -130,17 +152,9 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <FrameLayout
-            android:background="@color/lemon"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:onClick="@{() -> model.listener.goToPreview()}">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/complete" />
-        </FrameLayout>
+        <include
+            layout="@layout/layout_common_lemon_button"
+            android:onClick="@{() -> model.listener.goToPreview()}"
+            bind:title="@{@string/complete}" />
     </LinearLayout>
 </layout>
