초대말 입력하기 디자인 작업

--- a/app/src/main/res/layout/layout_common_lemon_button.xml
+++ b/app/src/main/res/layout/layout_common_lemon_button.xml
@@ -22,6 +22,6 @@
             android:textColor="@color/black"
             android:textSize="24dp"
             android:textStyle="bold"
-            tools:text="@string/complete" />
+            tools:text="title" />
     </FrameLayout>
 </layout>
