--- a/app/src/main/res/layout/activity_invitation_title.xml
+++ b/app/src/main/res/layout/activity_invitation_title.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -11,13 +12,16 @@
     </data>
 
     <LinearLayout
+        android:background="@color/white_two"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white_two">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -25,10 +29,22 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/btnInvitationTitleBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="6dp"
+                    android:src="@drawable/ic_arrow_back" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/input_date" />
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="@string/input_invitation"
+                    android:textColor="@color/black"
+                    android:textSize="20dp" />
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
@@ -39,42 +55,58 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:background="#fff"
+                android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:orientation="vertical"
                 android:paddingBottom="30dp">
 
                 <TextView
+                    android:text="@string/invitation_title"
+                    android:textColor="@color/black"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="23dp"
-                    android:text="전달하고 싶은\n말을 적어볼까요?" />
+                    android:textSize="24dp" />
 
-                <LinearLayout
+                <RelativeLayout
+                    android:layout_height="40dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_marginStart="19dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="45dp"
                     android:orientation="horizontal">
 
                     <View
+                        android:layout_centerVertical="true"
                         android:layout_width="1dp"
                         android:layout_height="20dp"
-                        android:background="@color/colorPrimary" />
+                        android:layout_marginStart="8dp"
+                        android:background="@color/black" />
 
                     <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="17dp"
+                        android:background="@null"
+                        android:singleLine="true"
+                        android:textColor="@color/black"
+                        android:textSize="16dp"
                         android:hint="@string/input_invitation_title"
                         android:text="@={model.title}" />
-                </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_alignParentBottom="true"
+                        android:background="@color/dark_mint" />
+                </RelativeLayout>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="336dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="60dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:orientation="vertical"
                     app:cardCornerRadius="16dp">
@@ -84,8 +116,11 @@
                         android:layout_height="match_parent"
                         android:layout_marginBottom="40dp"
                         android:background="@null"
+                        android:hint="@string/please_input_invitation_title"
+                        android:lineSpacingExtra="8dp"
+                        android:textColor="@color/black"
                         android:gravity="top"
-                        android:hint="절달하고 싶은 말을\n입력해주세요."
+                        android:textSize="16dp"
                         android:padding="16dp"
                         android:text="@={model.description}" />
 
@@ -112,18 +147,10 @@
             </LinearLayout>
         </ScrollView>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:background="#FEF051"
-            android:foreground="?attr/selectableItemBackground">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="입력 완료하기" />
-        </FrameLayout>
+        <include
+            layout="@layout/layout_common_lemon_button"
+            android:onClick="@{() -> model.saveData()}"
+            bind:title="@{@string/input_complete}" />
     </LinearLayout>
 
 </layout>
