--- a/app/src/main/res/layout/activity_invitation_preview.xml
+++ b/app/src/main/res/layout/activity_invitation_preview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -11,8 +12,10 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white_two">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -20,10 +23,22 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/btnPreviewBack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="6dp"
+                    android:src="@drawable/ic_arrow_back" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/input_date" />
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="@string/invitation_preview"
+                    android:textColor="@color/black"
+                    android:textSize="20dp" />
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
@@ -33,18 +48,9 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <FrameLayout
+        <include
             android:id="@+id/btnInvitationPreviewShare"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@color/lemon">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/share" />
-        </FrameLayout>
-
+            layout="@layout/layout_common_lemon_button"
+            bind:title="@{@string/share}" />
     </LinearLayout>
 </layout>
