--- a/app/src/main/res/layout/item_type_choice.xml
+++ b/app/src/main/res/layout/item_type_choice.xml
@@ -42,8 +42,6 @@
                         android:id="@+id/tvTypeTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="애교만점형"
                         android:textColor="@color/black"
                         android:textSize="24sp"
                         android:textStyle="bold"
@@ -66,7 +64,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:lineSpacingExtra="4sp"
-                        android:text="난 너 꼭 와주면 좋겠어\n와줄꺼지?"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +77,7 @@
                         android:layout_marginTop="25dp"
                         android:layout_marginBottom="22dp"
                         android:lineSpacingExtra="8sp"
-                        android:text="새로운 초대장을 만들어 볼까요?"
+                        android:text="@string/make_suggest_type_default"
                         android:textColor="#9e9e9e"
                         android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
