--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="colorTypeIndicatorSelectedDot">#1f4bb3</color>
+    <color name="colorTypeIndicatorUnSelectedDot">#4c1f4bb3</color>
+  
     <color name="black">#000000</color>
     <color name="blue_blue">#234eb6</color>
     <color name="dark_mint">#60d170</color>
