#43 시간 입력 프레그먼트 연결

--- a/app/src/main/res/layout/layout_common_lemon_button.xml
+++ b/app/src/main/res/layout/layout_common_lemon_button.xml
@@ -12,6 +12,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="64dp"
+        android:foreground="?attr/selectableItemBackground"
         android:background="@color/lemon">
 
         <TextView
