#43 장소 입력 프레그먼트 연결

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -102,7 +102,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_marginTop="16dp"
-                    android:onClick="@{() -> model.listener.goToInvitationLocation()}"
+                    android:onClick="@{() -> model.listener.goToInvitationInputLocation()}"
                     bind:isChecked="@{model.isLocation()}"
                     bind:title="@{@string/input_location}" />
 
