--- a/app/src/main/res/layout/fragment_image_picker.xml
+++ b/app/src/main/res/layout/fragment_image_picker.xml
@@ -43,15 +43,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvImage" />
 
-        <TextView
+        <com.mashup.nawainvitation.custom.LemonButton
             android:id="@+id/tvInput"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:text="입력 완료하기"
+            android:text="@string/input_complete"
             android:textSize="24dp"
-            android:textColor="@color/black"
-            android:gravity="center"
-            android:background="#FEF051"
+            android:enabled="true"
             app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
