레몬 버튼 적용하기

--- a/app/src/main/res/layout/fragment_invitation_info.xml
+++ b/app/src/main/res/layout/fragment_invitation_info.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -116,10 +115,13 @@
             </LinearLayout>
         </ScrollView>
 
-        <include
-            layout="@layout/layout_common_lemon_button"
+        <com.mashup.nawainvitation.custom.LemonButton
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:onClick="@{() -> model.saveData()}"
-            bind:title="@{@string/input_complete}" />
+            android:enabled="true"
+            android:text="@string/input_complete"
+            android:textSize="24dp" />
     </LinearLayout>
 
 </layout>
