--- a/app/src/main/res/layout/activity_invitation_preview.xml
+++ b/app/src/main/res/layout/activity_invitation_preview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -48,9 +47,12 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <include
+        <com.mashup.nawainvitation.custom.LemonButton
             android:id="@+id/btnInvitationPreview"
-            layout="@layout/layout_common_lemon_button"
-            bind:title="@{@string/share}" />
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:enabled="true"
+            android:text="@string/input_complete"
+            android:textSize="24dp" />
     </LinearLayout>
 </layout>
