#14 date time picker 완료 버튼 (비)활성화, 초기값 오전 오후 변경

--- a/app/src/main/res/layout/fragment_selecting_datetime.xml
+++ b/app/src/main/res/layout/fragment_selecting_datetime.xml
@@ -136,7 +136,6 @@
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:text="@string/input_complete"
-            android:textSize="18sp"
-            android:enabled="true"/>
+            android:textSize="18sp"/>
     </LinearLayout>
 </layout>
