#75 이미지 사이즈 조정 적용

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="96dp"
                 android:layout_gravity="center|bottom"
-                bind:setImageUrl="@{model.invitations.templateBackgroundImageUrl}"
+                bind:setInvitationImageUrl="@{model.invitations.templateBackgroundImageUrl}"
                 tools:background="@color/white" />
         </FrameLayout>
 
