--- a/app/src/main/res/layout/layout_main_button.xml
+++ b/app/src/main/res/layout/layout_main_button.xml
@@ -41,6 +41,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:textColor="@color/black"
+                android:textSize="16dp"
                 android:includeFontPadding="false"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
