- 초대장 유형화면 내부 디비 연결 - rx 에서 null 에러 수정

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -130,7 +130,7 @@
         <com.mashup.nawainvitation.custom.LemonButton
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:onClick="@{() -> model.listener.goToPreview()}"
+            android:onClick="@{() -> model.completeInvitation()}"
             android:enabled="@{model.enableBtn}"
             android:text="@string/complete"
             android:textSize="24dp" />
