메인 화면 개편 - 타입 선택 화면과 초대장 만들기 화면 합침 - room 구조 변경 (V2 생성) - 웹뷰 미리보기 화면 높이 조정
Signed-off-by: dlwls5201 <dlwls5201@naver.com>

--- a/app/src/main/res/layout/activity_invitation_preview.xml
+++ b/app/src/main/res/layout/activity_invitation_preview.xml
@@ -41,18 +41,24 @@
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <WebView
-            android:id="@+id/webviewInvitation"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1">
 
-        <com.mashup.nawainvitation.custom.LemonButton
-            android:id="@+id/btnInvitationPreview"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:enabled="true"
-            android:text="@string/input_complete"
-            android:textSize="24dp" />
+            <WebView
+                android:id="@+id/webviewInvitation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <com.mashup.nawainvitation.custom.LemonButton
+                android:id="@+id/btnInvitationPreview"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="bottom"
+                android:enabled="true"
+                android:text="@string/input_complete"
+                android:textSize="24dp" />
+        </FrameLayout>
     </LinearLayout>
 </layout>
