--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,6 +27,17 @@
             android:layout_height="140dp"
             android:background="@color/white_two" />
 
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tlMain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/white_two"
+            app:tabBackground="@drawable/selector_type_indicator"
+            app:tabGravity="center"
+            app:tabIndicator="@null"
+            app:tabPaddingStart="0.1dp" />
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
